Se agrega modelo y controlador de cupos_por_dependencia
